--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read backend version
+        id: backend-version
+        run: |
+          VERSION=$(cat backend/version | tr -d '[:space:]')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Backend version: $VERSION"
+
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
@@ -40,10 +47,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/backend
           tags: |
+            type=raw,value=${{ steps.backend-version.outputs.version }}
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Backend
@@ -72,6 +77,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read frontend version
+        id: frontend-version
+        run: |
+          VERSION=$(cat frontend/version | tr -d '[:space:]')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Frontend version: $VERSION"
+
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
@@ -85,10 +97,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/frontend
           tags: |
+            type=raw,value=${{ steps.frontend-version.outputs.version }}
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Frontend
