--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -7,6 +7,7 @@ on:
       - master
     paths:
       - 'backend/**'
+      - 'backend/version'
       - 'external/**'
       - 'docker/backend.Dockerfile'
       - '.github/workflows/build-backend.yml'
@@ -16,6 +17,7 @@ on:
       - master
     paths:
       - 'backend/**'
+      - 'backend/version'
       - 'external/**'
       - 'docker/backend.Dockerfile'
       - '.github/workflows/build-backend.yml'
@@ -41,6 +43,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read backend version
+        id: version
+        run: |
+          VERSION=$(cat backend/version | tr -d '[:space:]')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Backend version: $VERSION"
+
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -55,11 +64,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=raw,value=${{ steps.version.outputs.version }}
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
