--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -7,6 +7,7 @@ on:
       - master
     paths:
       - 'frontend/**'
+      - 'frontend/version'
       - 'docker/frontend.Dockerfile'
       - '.github/workflows/build-frontend.yml'
   pull_request:
@@ -15,6 +16,7 @@ on:
       - master
     paths:
       - 'frontend/**'
+      - 'frontend/version'
       - 'docker/frontend.Dockerfile'
       - '.github/workflows/build-frontend.yml'
   workflow_dispatch:
@@ -39,6 +41,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read frontend version
+        id: version
+        run: |
+          VERSION=$(cat frontend/version | tr -d '[:space:]')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Frontend version: $VERSION"
+
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -53,11 +62,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=raw,value=${{ steps.version.outputs.version }}
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
