--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -2,11 +2,8 @@ name: Build and Publish All Images
 
 on:
   push:
-    branches:
-      - main
-      - master
     tags:
-      - 'v*.*.*'
+      - '*'
   workflow_dispatch:
 
 env:
@@ -48,8 +45,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/backend
           tags: |
             type=raw,value=${{ steps.backend-version.outputs.version }}
-            type=ref,event=branch
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
 
       - name: Build and push Backend
         uses: docker/build-push-action@v5
@@ -98,8 +94,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.repository }}/frontend
           tags: |
             type=raw,value=${{ steps.frontend-version.outputs.version }}
-            type=ref,event=branch
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
