--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -2,25 +2,8 @@ name: Build and Publish Backend
 
 on:
   push:
-    branches:
-      - main
-      - master
-    paths:
-      - 'backend/**'
-      - 'backend/version'
-      - 'external/**'
-      - 'docker/backend.Dockerfile'
-      - '.github/workflows/build-backend.yml'
-  pull_request:
-    branches:
-      - main
-      - master
-    paths:
-      - 'backend/**'
-      - 'backend/version'
-      - 'external/**'
-      - 'docker/backend.Dockerfile'
-      - '.github/workflows/build-backend.yml'
+    tags:
+      - '*'
   workflow_dispatch:
 
 env:
@@ -51,7 +34,6 @@ jobs:
           echo "Backend version: $VERSION"
 
       - name: Log in to Container Registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -65,16 +47,14 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{ steps.version.outputs.version }}
-            type=ref,event=branch
-            type=ref,event=pr
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/backend.Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
