fix deploy configs

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3.8'
 services:
   # Nginx reverse proxy with SSL
   nginx:
+    env_file:
+      - .env
     image: nginx:alpine
     container_name: webapp-nginx
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-init.conf:/etc/nginx/nginx-init.conf:ro
@@ -22,11 +24,11 @@ services:
     entrypoint: ["/bin/sh", "/docker-entrypoint.sh"]
     environment:
       - DOMAIN=${DOMAIN:-localhost}
-    env_file:
-      - .env
 
   # Certbot for Let's Encrypt certificates
   certbot:
+    env_file:
+      - .env
     image: certbot/certbot
     container_name: webapp-certbot
     volumes:
@@ -40,8 +42,6 @@ services:
       - DOMAIN=${DOMAIN:-localhost}
       - EMAIL=${EMAIL:-}
       - STAGING=${STAGING:-0}
-    env_file:
-      - .env
     depends_on:
       - nginx
 
@@ -52,9 +52,9 @@ services:
     image: postgres:15-alpine
     container_name: webapp-postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: webapp
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-webapp}
     volumes:
       - /data/webapp/postgresql:/var/lib/postgresql/data
     healthcheck:
@@ -72,7 +72,7 @@ services:
     image: ghcr.io/cydanix/web-app-tmpl/backend:0.0.1
     container_name: webapp-backend
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/webapp
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-webapp}
       HOST: 0.0.0.0
       PORT: 8080
       RUST_LOG: info
