--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -33,7 +33,7 @@ http {
     # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name _;
+        server_name ${DOMAIN};
 
         # Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
@@ -49,7 +49,7 @@ http {
     # HTTPS server
     server {
         listen 443 ssl http2;
-        server_name _;
+        server_name ${DOMAIN};
 
         # SSL configuration (DOMAIN will be replaced by envsubst)
         ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
