--- a/deploy/nginx-init.conf
+++ b/deploy/nginx-init.conf
@@ -22,7 +22,7 @@ http {
     # HTTP server - initial setup (before SSL certificates)
     server {
         listen 80;
-        server_name _;
+        server_name ${DOMAIN};
 
         # Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
