--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -48,7 +48,8 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name ${DOMAIN};
 
         # SSL configuration (DOMAIN will be replaced by envsubst)
@@ -65,6 +66,19 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
+
+        # Proxy API requests to backend
+        location /api {
+            limit_req zone=api_limit burst=10 nodelay;
+            proxy_pass http://backend:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
 
         # Proxy to frontend
         location / {
