--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-init.conf:/etc/nginx/nginx-init.conf:ro
       - ./nginx-entrypoint.sh:/docker-entrypoint.sh:ro
-      - certbot-www:/var/www/certbot
-      - certbot-conf:/etc/letsencrypt
+      - /data/webapp/certbot-www:/var/www/certbot:ro
+      - /data/webapp/certbot-conf:/etc/letsencrypt:ro
     depends_on:
       - frontend
     networks:
@@ -33,8 +33,8 @@ services:
     container_name: webapp-certbot
     volumes:
       - ./certbot-entrypoint.sh:/docker-entrypoint.sh:ro
-      - certbot-www:/var/www/certbot
-      - certbot-conf:/etc/letsencrypt
+      - /data/webapp/certbot-www:/var/www/certbot
+      - /data/webapp/certbot-conf:/etc/letsencrypt
     networks:
       - webapp-network
     entrypoint: ["/bin/sh", "/docker-entrypoint.sh"]
@@ -97,7 +97,7 @@ services:
     container_name: webapp-frontend
     environment:
       PORT: 3000
-      NEXT_PUBLIC_API_URL: http://backend:8080
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-/api}
     depends_on:
       - backend
     healthcheck:
@@ -109,10 +109,6 @@ services:
     networks:
       - webapp-network
     restart: unless-stopped
-
-volumes:
-  certbot-www:
-  certbot-conf:
 
 networks:
   webapp-network:
