--- a/deploy/nginx-init.conf
+++ b/deploy/nginx-init.conf
@@ -29,6 +29,18 @@ http {
             root /var/www/certbot;
         }
 
+        # Proxy API requests to backend
+        location /api {
+            proxy_pass http://backend:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
         # Proxy to frontend (HTTP only until certificates are ready)
         location / {
             proxy_pass http://frontend:3000;
