--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-bootstrap": "^2.10.0",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "gray-matter": "^4.0.3",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
