--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "react-bootstrap": "^2.10.0",
     "bootstrap": "^5.3.0",
     "gray-matter": "^4.0.3",
+    "next": "16.0.10",
+    "react": "^19.2.0",
+    "react-bootstrap": "^2.10.0",
+    "react-dom": "^19.2.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.0",
+    "eslint": "^9",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^10.4.6"
   }
 }
-
