--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -6,3 +6,7 @@ POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
 HTTP_PORT=30080
 HTTPS_PORT=30443
+BACKEND_VERSION=0.0.3
+FRONTEND_VERSION=0.0.5
+
+GOOGLE_OAUTH_CLIENT_ID=1056438652481-vmhgakmntg1odu6o231of4i772dkacd4.apps.googleusercontent.com
