--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       HOST: 0.0.0.0
       PORT: 8080
       RUST_LOG: info
+      GOOGLE_OAUTH_CLIENT_ID: ${GOOGLE_OAUTH_CLIENT_ID:-}
     depends_on:
       postgres:
         condition: service_healthy
@@ -98,6 +99,7 @@ services:
     environment:
       PORT: 3000
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-/api}
+      NEXT_PUBLIC_GOOGLE_OAUTH_CLIENT_ID: ${GOOGLE_OAUTH_CLIENT_ID:-}
     depends_on:
       - backend
     healthcheck:
