--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.0",
     "gray-matter": "^4.0.3",
     "next": "16.0.10",
+    "next-intl": "^4.6.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^19.2.0",
